parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RETURN
    SEMI

Grammar

Rule 0     S' -> inicial
Rule 1     inicial -> INT MAIN LPAREN RPAREN bloco_principal SEMICOLON
Rule 2     bloco_principal -> LBRACES corpo RBRACES
Rule 3     corpo -> comando
Rule 4     corpo -> corpo comando
Rule 5     comando -> declaracoes
Rule 6     comando -> bloco_while
Rule 7     comando -> bloco_if
Rule 8     comando -> bloco_for
Rule 9     comando -> expressao
Rule 10    expressao -> atribuicao
Rule 11    declaracoes -> tipos ID SEMICOLON
Rule 12    declaracoes -> tipos declaracoes_linha SEMICOLON
Rule 13    declaracoes -> tipos ID EQUALS values SEMICOLON
Rule 14    declaracoes -> tipos ID EQUALS ID SEMICOLON
Rule 15    declaracoes -> tipos ID EQUALS operacao_aritmetica SEMICOLON
Rule 16    declaracoes_linha -> ID COMMA declaracoes_linha
Rule 17    declaracoes_linha -> ID
Rule 18    bloco_while -> WHILE LPAREN condicao RPAREN LBRACES corpo RBRACES
Rule 19    bloco_if -> IF LPAREN condicao RPAREN LBRACES corpo RBRACES
Rule 20    bloco_if -> IF LPAREN condicao RPAREN LBRACES corpo RBRACES ELSE LBRACES corpo RBRACES
Rule 21    bloco_if -> IF LPAREN condicao RPAREN LBRACES corpo RBRACES ELSE bloco_if
Rule 22    bloco_for -> FOR LPAREN condicao_for RPAREN LBRACES corpo RBRACES
Rule 23    condicao_for -> tipos ID EQUALS values SEMICOLON ID operadores_comparativos values SEMICOLON ID PLUS PLUS
Rule 24    condicao_for -> tipos ID EQUALS values SEMICOLON ID operadores_comparativos ID SEMICOLON ID PLUS PLUS
Rule 25    condicao_for -> ID EQUALS values SEMICOLON ID operadores_comparativos values SEMICOLON ID PLUS PLUS
Rule 26    condicao_for -> ID EQUALS values SEMICOLON ID operadores_comparativos ID SEMICOLON ID PLUS PLUS
Rule 27    condicao_for -> tipos ID EQUALS values SEMICOLON ID operadores_comparativos values SEMICOLON ID MINUS MINUS
Rule 28    condicao_for -> tipos ID EQUALS values SEMICOLON ID operadores_comparativos ID SEMICOLON ID MINUS MINUS
Rule 29    condicao_for -> ID EQUALS values SEMICOLON ID operadores_comparativos values SEMICOLON ID MINUS MINUS
Rule 30    condicao_for -> ID EQUALS values SEMICOLON ID operadores_comparativos ID SEMICOLON ID MINUS MINUS
Rule 31    atribuicao -> ID EQUALS values SEMICOLON
Rule 32    atribuicao -> ID EQUALS ID SEMICOLON
Rule 33    atribuicao -> ID EQUALS operacao_aritmetica SEMICOLON
Rule 34    operacao_aritmetica -> ID operadores_aritmeticos ID
Rule 35    operacao_aritmetica -> ID operadores_aritmeticos values
Rule 36    operacao_aritmetica -> values operadores_aritmeticos ID
Rule 37    operacao_aritmetica -> values operadores_aritmeticos values
Rule 38    condicao -> values operadores_comparativos values
Rule 39    condicao -> values operadores_comparativos ID
Rule 40    condicao -> ID operadores_comparativos values
Rule 41    condicao -> ID operadores_comparativos ID
Rule 42    operadores_comparativos -> LT
Rule 43    operadores_comparativos -> LE
Rule 44    operadores_comparativos -> GT
Rule 45    operadores_comparativos -> GE
Rule 46    operadores_comparativos -> NE
Rule 47    operadores_aritmeticos -> PLUS
Rule 48    operadores_aritmeticos -> MINUS
Rule 49    operadores_aritmeticos -> TIMES
Rule 50    operadores_aritmeticos -> DIVIDE
Rule 51    operadores_aritmeticos -> POWER
Rule 52    tipos -> INT
Rule 53    tipos -> CHAR
Rule 54    tipos -> FLOAT
Rule 55    values -> INTEGER
Rule 56    values -> STRING
Rule 57    values -> FLOATN

Terminals, with rules where they appear

CHAR                 : 53
COMMA                : 16
DIVIDE               : 50
ELSE                 : 20 21
EQUALS               : 13 14 15 23 24 25 26 27 28 29 30 31 32 33
FLOAT                : 54
FLOATN               : 57
FOR                  : 22
GE                   : 45
GT                   : 44
ID                   : 11 13 14 14 15 16 17 23 23 23 24 24 24 24 25 25 25 26 26 26 26 27 27 27 28 28 28 28 29 29 29 30 30 30 30 31 32 32 33 34 34 35 36 39 40 41 41
IF                   : 19 20 21
INT                  : 1 52
INTEGER              : 55
LBRACES              : 2 18 19 20 20 21 22
LE                   : 43
LPAREN               : 1 18 19 20 21 22
LT                   : 42
MAIN                 : 1
MINUS                : 27 27 28 28 29 29 30 30 48
NE                   : 46
PLUS                 : 23 23 24 24 25 25 26 26 47
POWER                : 51
RBRACES              : 2 18 19 20 20 21 22
RETURN               : 
RPAREN               : 1 18 19 20 21 22
SEMI                 : 
SEMICOLON            : 1 11 12 13 14 15 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 32 33
STRING               : 56
TIMES                : 49
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

atribuicao           : 10
bloco_for            : 8
bloco_if             : 7 21
bloco_principal      : 1
bloco_while          : 6
comando              : 3 4
condicao             : 18 19 20 21
condicao_for         : 22
corpo                : 2 4 18 19 20 20 21 22
declaracoes          : 5
declaracoes_linha    : 12 16
expressao            : 9
inicial              : 0
operacao_aritmetica  : 15 33
operadores_aritmeticos : 34 35 36 37
operadores_comparativos : 23 24 25 26 27 28 29 30 38 39 40 41
tipos                : 11 12 13 14 15 23 24 27 28
values               : 13 23 23 24 25 25 26 27 27 28 29 29 30 31 35 36 37 37 38 38 39 40

Parsing method: LALR

state 0

    (0) S' -> . inicial
    (1) inicial -> . INT MAIN LPAREN RPAREN bloco_principal SEMICOLON

    INT             shift and go to state 2

    inicial                        shift and go to state 1

state 1

    (0) S' -> inicial .



state 2

    (1) inicial -> INT . MAIN LPAREN RPAREN bloco_principal SEMICOLON

    MAIN            shift and go to state 3


state 3

    (1) inicial -> INT MAIN . LPAREN RPAREN bloco_principal SEMICOLON

    LPAREN          shift and go to state 4


state 4

    (1) inicial -> INT MAIN LPAREN . RPAREN bloco_principal SEMICOLON

    RPAREN          shift and go to state 5


state 5

    (1) inicial -> INT MAIN LPAREN RPAREN . bloco_principal SEMICOLON
    (2) bloco_principal -> . LBRACES corpo RBRACES

    LBRACES         shift and go to state 7

    bloco_principal                shift and go to state 6

state 6

    (1) inicial -> INT MAIN LPAREN RPAREN bloco_principal . SEMICOLON

    SEMICOLON       shift and go to state 8


state 7

    (2) bloco_principal -> LBRACES . corpo RBRACES
    (3) corpo -> . comando
    (4) corpo -> . corpo comando
    (5) comando -> . declaracoes
    (6) comando -> . bloco_while
    (7) comando -> . bloco_if
    (8) comando -> . bloco_for
    (9) comando -> . expressao
    (11) declaracoes -> . tipos ID SEMICOLON
    (12) declaracoes -> . tipos declaracoes_linha SEMICOLON
    (13) declaracoes -> . tipos ID EQUALS values SEMICOLON
    (14) declaracoes -> . tipos ID EQUALS ID SEMICOLON
    (15) declaracoes -> . tipos ID EQUALS operacao_aritmetica SEMICOLON
    (18) bloco_while -> . WHILE LPAREN condicao RPAREN LBRACES corpo RBRACES
    (19) bloco_if -> . IF LPAREN condicao RPAREN LBRACES corpo RBRACES
    (20) bloco_if -> . IF LPAREN condicao RPAREN LBRACES corpo RBRACES ELSE LBRACES corpo RBRACES
    (21) bloco_if -> . IF LPAREN condicao RPAREN LBRACES corpo RBRACES ELSE bloco_if
    (22) bloco_for -> . FOR LPAREN condicao_for RPAREN LBRACES corpo RBRACES
    (10) expressao -> . atribuicao
    (52) tipos -> . INT
    (53) tipos -> . CHAR
    (54) tipos -> . FLOAT
    (31) atribuicao -> . ID EQUALS values SEMICOLON
    (32) atribuicao -> . ID EQUALS ID SEMICOLON
    (33) atribuicao -> . ID EQUALS operacao_aritmetica SEMICOLON

    WHILE           shift and go to state 18
    IF              shift and go to state 19
    FOR             shift and go to state 20
    INT             shift and go to state 22
    CHAR            shift and go to state 23
    FLOAT           shift and go to state 24
    ID              shift and go to state 17

    corpo                          shift and go to state 9
    comando                        shift and go to state 10
    declaracoes                    shift and go to state 11
    bloco_while                    shift and go to state 12
    bloco_if                       shift and go to state 13
    bloco_for                      shift and go to state 14
    expressao                      shift and go to state 15
    tipos                          shift and go to state 16
    atribuicao                     shift and go to state 21

state 8

    (1) inicial -> INT MAIN LPAREN RPAREN bloco_principal SEMICOLON .

    $end            reduce using rule 1 (inicial -> INT MAIN LPAREN RPAREN bloco_principal SEMICOLON .)


state 9

    (2) bloco_principal -> LBRACES corpo . RBRACES
    (4) corpo -> corpo . comando
    (5) comando -> . declaracoes
    (6) comando -> . bloco_while
    (7) comando -> . bloco_if
    (8) comando -> . bloco_for
    (9) comando -> . expressao
    (11) declaracoes -> . tipos ID SEMICOLON
    (12) declaracoes -> . tipos declaracoes_linha SEMICOLON
    (13) declaracoes -> . tipos ID EQUALS values SEMICOLON
    (14) declaracoes -> . tipos ID EQUALS ID SEMICOLON
    (15) declaracoes -> . tipos ID EQUALS operacao_aritmetica SEMICOLON
    (18) bloco_while -> . WHILE LPAREN condicao RPAREN LBRACES corpo RBRACES
    (19) bloco_if -> . IF LPAREN condicao RPAREN LBRACES corpo RBRACES
    (20) bloco_if -> . IF LPAREN condicao RPAREN LBRACES corpo RBRACES ELSE LBRACES corpo RBRACES
    (21) bloco_if -> . IF LPAREN condicao RPAREN LBRACES corpo RBRACES ELSE bloco_if
    (22) bloco_for -> . FOR LPAREN condicao_for RPAREN LBRACES corpo RBRACES
    (10) expressao -> . atribuicao
    (52) tipos -> . INT
    (53) tipos -> . CHAR
    (54) tipos -> . FLOAT
    (31) atribuicao -> . ID EQUALS values SEMICOLON
    (32) atribuicao -> . ID EQUALS ID SEMICOLON
    (33) atribuicao -> . ID EQUALS operacao_aritmetica SEMICOLON

    RBRACES         shift and go to state 25
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    FOR             shift and go to state 20
    INT             shift and go to state 22
    CHAR            shift and go to state 23
    FLOAT           shift and go to state 24
    ID              shift and go to state 17

    comando                        shift and go to state 26
    declaracoes                    shift and go to state 11
    bloco_while                    shift and go to state 12
    bloco_if                       shift and go to state 13
    bloco_for                      shift and go to state 14
    expressao                      shift and go to state 15
    tipos                          shift and go to state 16
    atribuicao                     shift and go to state 21

state 10

    (3) corpo -> comando .

    RBRACES         reduce using rule 3 (corpo -> comando .)
    WHILE           reduce using rule 3 (corpo -> comando .)
    IF              reduce using rule 3 (corpo -> comando .)
    FOR             reduce using rule 3 (corpo -> comando .)
    INT             reduce using rule 3 (corpo -> comando .)
    CHAR            reduce using rule 3 (corpo -> comando .)
    FLOAT           reduce using rule 3 (corpo -> comando .)
    ID              reduce using rule 3 (corpo -> comando .)


state 11

    (5) comando -> declaracoes .

    RBRACES         reduce using rule 5 (comando -> declaracoes .)
    WHILE           reduce using rule 5 (comando -> declaracoes .)
    IF              reduce using rule 5 (comando -> declaracoes .)
    FOR             reduce using rule 5 (comando -> declaracoes .)
    INT             reduce using rule 5 (comando -> declaracoes .)
    CHAR            reduce using rule 5 (comando -> declaracoes .)
    FLOAT           reduce using rule 5 (comando -> declaracoes .)
    ID              reduce using rule 5 (comando -> declaracoes .)


state 12

    (6) comando -> bloco_while .

    RBRACES         reduce using rule 6 (comando -> bloco_while .)
    WHILE           reduce using rule 6 (comando -> bloco_while .)
    IF              reduce using rule 6 (comando -> bloco_while .)
    FOR             reduce using rule 6 (comando -> bloco_while .)
    INT             reduce using rule 6 (comando -> bloco_while .)
    CHAR            reduce using rule 6 (comando -> bloco_while .)
    FLOAT           reduce using rule 6 (comando -> bloco_while .)
    ID              reduce using rule 6 (comando -> bloco_while .)


state 13

    (7) comando -> bloco_if .

    RBRACES         reduce using rule 7 (comando -> bloco_if .)
    WHILE           reduce using rule 7 (comando -> bloco_if .)
    IF              reduce using rule 7 (comando -> bloco_if .)
    FOR             reduce using rule 7 (comando -> bloco_if .)
    INT             reduce using rule 7 (comando -> bloco_if .)
    CHAR            reduce using rule 7 (comando -> bloco_if .)
    FLOAT           reduce using rule 7 (comando -> bloco_if .)
    ID              reduce using rule 7 (comando -> bloco_if .)


state 14

    (8) comando -> bloco_for .

    RBRACES         reduce using rule 8 (comando -> bloco_for .)
    WHILE           reduce using rule 8 (comando -> bloco_for .)
    IF              reduce using rule 8 (comando -> bloco_for .)
    FOR             reduce using rule 8 (comando -> bloco_for .)
    INT             reduce using rule 8 (comando -> bloco_for .)
    CHAR            reduce using rule 8 (comando -> bloco_for .)
    FLOAT           reduce using rule 8 (comando -> bloco_for .)
    ID              reduce using rule 8 (comando -> bloco_for .)


state 15

    (9) comando -> expressao .

    RBRACES         reduce using rule 9 (comando -> expressao .)
    WHILE           reduce using rule 9 (comando -> expressao .)
    IF              reduce using rule 9 (comando -> expressao .)
    FOR             reduce using rule 9 (comando -> expressao .)
    INT             reduce using rule 9 (comando -> expressao .)
    CHAR            reduce using rule 9 (comando -> expressao .)
    FLOAT           reduce using rule 9 (comando -> expressao .)
    ID              reduce using rule 9 (comando -> expressao .)


state 16

    (11) declaracoes -> tipos . ID SEMICOLON
    (12) declaracoes -> tipos . declaracoes_linha SEMICOLON
    (13) declaracoes -> tipos . ID EQUALS values SEMICOLON
    (14) declaracoes -> tipos . ID EQUALS ID SEMICOLON
    (15) declaracoes -> tipos . ID EQUALS operacao_aritmetica SEMICOLON
    (16) declaracoes_linha -> . ID COMMA declaracoes_linha
    (17) declaracoes_linha -> . ID

    ID              shift and go to state 27

    declaracoes_linha              shift and go to state 28

state 17

    (31) atribuicao -> ID . EQUALS values SEMICOLON
    (32) atribuicao -> ID . EQUALS ID SEMICOLON
    (33) atribuicao -> ID . EQUALS operacao_aritmetica SEMICOLON

    EQUALS          shift and go to state 29


state 18

    (18) bloco_while -> WHILE . LPAREN condicao RPAREN LBRACES corpo RBRACES

    LPAREN          shift and go to state 30


state 19

    (19) bloco_if -> IF . LPAREN condicao RPAREN LBRACES corpo RBRACES
    (20) bloco_if -> IF . LPAREN condicao RPAREN LBRACES corpo RBRACES ELSE LBRACES corpo RBRACES
    (21) bloco_if -> IF . LPAREN condicao RPAREN LBRACES corpo RBRACES ELSE bloco_if

    LPAREN          shift and go to state 31


state 20

    (22) bloco_for -> FOR . LPAREN condicao_for RPAREN LBRACES corpo RBRACES

    LPAREN          shift and go to state 32


state 21

    (10) expressao -> atribuicao .

    RBRACES         reduce using rule 10 (expressao -> atribuicao .)
    WHILE           reduce using rule 10 (expressao -> atribuicao .)
    IF              reduce using rule 10 (expressao -> atribuicao .)
    FOR             reduce using rule 10 (expressao -> atribuicao .)
    INT             reduce using rule 10 (expressao -> atribuicao .)
    CHAR            reduce using rule 10 (expressao -> atribuicao .)
    FLOAT           reduce using rule 10 (expressao -> atribuicao .)
    ID              reduce using rule 10 (expressao -> atribuicao .)


state 22

    (52) tipos -> INT .

    ID              reduce using rule 52 (tipos -> INT .)


state 23

    (53) tipos -> CHAR .

    ID              reduce using rule 53 (tipos -> CHAR .)


state 24

    (54) tipos -> FLOAT .

    ID              reduce using rule 54 (tipos -> FLOAT .)


state 25

    (2) bloco_principal -> LBRACES corpo RBRACES .

    SEMICOLON       reduce using rule 2 (bloco_principal -> LBRACES corpo RBRACES .)


state 26

    (4) corpo -> corpo comando .

    RBRACES         reduce using rule 4 (corpo -> corpo comando .)
    WHILE           reduce using rule 4 (corpo -> corpo comando .)
    IF              reduce using rule 4 (corpo -> corpo comando .)
    FOR             reduce using rule 4 (corpo -> corpo comando .)
    INT             reduce using rule 4 (corpo -> corpo comando .)
    CHAR            reduce using rule 4 (corpo -> corpo comando .)
    FLOAT           reduce using rule 4 (corpo -> corpo comando .)
    ID              reduce using rule 4 (corpo -> corpo comando .)


state 27

    (11) declaracoes -> tipos ID . SEMICOLON
    (13) declaracoes -> tipos ID . EQUALS values SEMICOLON
    (14) declaracoes -> tipos ID . EQUALS ID SEMICOLON
    (15) declaracoes -> tipos ID . EQUALS operacao_aritmetica SEMICOLON
    (16) declaracoes_linha -> ID . COMMA declaracoes_linha
    (17) declaracoes_linha -> ID .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 33
    EQUALS          shift and go to state 34
    COMMA           shift and go to state 35

  ! SEMICOLON       [ reduce using rule 17 (declaracoes_linha -> ID .) ]


state 28

    (12) declaracoes -> tipos declaracoes_linha . SEMICOLON

    SEMICOLON       shift and go to state 36


state 29
